@@ -1716,7 +1716,7 @@ def main():
 	optparser.add_option(      "--skip-existing", dest="skip_existing", action="store_true", help="Skip over files that exist at the destination (only for [get] and [sync] commands).")
 	optparser.add_option("-r", "--recursive", dest="recursive", action="store_true", help="Recursive upload, download or removal.")
 	optparser.add_option(      "--check-md5", dest="check_md5", action="store_true", help="Check MD5 sums when comparing files for [sync]. (default)")
-	optparser.add_option(      "--no-check-md5", dest="check_md5", action="store_false", help="Do not check MD5 sums when comparing files for [sync]. Only size be compared. May significantly speed up transfer but may also miss some changed files.")
+	optparser.add_option(      "--no-check-md5", dest="check_md5", action="store_false", help="Do not check MD5 sums when comparing files for [sync]. Only size will be compared. May significantly speed up transfer but may also miss some changed files.")
 	optparser.add_option("-P", "--acl-public", dest="acl_public", action="store_true", help="Store objects with ACL allowing read for anyone.")
 	optparser.add_option(      "--acl-private", dest="acl_public", action="store_false", help="Store objects with default ACL allowing access for you only.")
 	optparser.add_option(      "--acl-grant", dest="acl_grants", type="s3acl", action="append", metavar="PERMISSION:EMAIL or USER_CANONICAL_ID", help="Grant stated permission to a given amazon user. Permission is one of: read, write, read_acp, write_acp, full_control, all")
@@ -1771,7 +1771,8 @@ def main():
 		'"buckets" and uploading, downloading and removing '+
 		'"objects" from these buckets.')
 	optparser.epilog = format_commands(optparser.get_prog_name(), commands_list)
-	optparser.epilog += ("\nSee program homepage for more information at\n%s\n" % PkgInfo.url)
+	optparser.epilog += ("\nFor more informations see the progect homepage:\n%s\n" % PkgInfo.url)
+	optparser.epilog += ("\nConsider a donation if you have found s3cmd useful:\n%s/donate\n" % PkgInfo.url)
 
 	(options, args) = optparser.parse_args()
 
@@ -1906,9 +1907,6 @@ def main():
 	patterns_list, patterns_textual = process_patterns(options.rinclude, options.rinclude_from, is_glob = False, option_txt = "rinclude")
 	cfg.include.extend(patterns_list)
 	cfg.debug_include.update(patterns_textual)
-
-	## Process --follow-symlinks
-	cfg.update_option("follow_symlinks", options.follow_symlinks)
 
 	## Set socket read()/write() timeout
 	socket.setdefaulttimeout(cfg.socket_timeout)
