@@ -1,3 +1,10 @@
+2011-01-02  Michal Ludvig  <mludvig@logix.net.nz>
+
+	* s3cmd, s3cmd.1, format-manpage.pl: Improved --help text
+	  and manpage.
+	* s3cmd: Removed explicit processing of --follow-symlinks
+	  (is cought by the default / main loop).
+
 2010-12-24  Michal Ludvig  <mludvig@logix.net.nz>
 
 	* s3cmd: Set 10s socket timeout for read()/write().
